# PhotoBackUp

./: .editorconfig  .gitignore  LICENSE  README.md  netlify.toml  pyproject.toml  sample.tgz  vercel.json
docs/: MOBILE.md  WINDOWS.md
scripts/: client_sim.py  win_schedule.ps1
src/photobackup/: __init__.py  cli.py  server.py  storage.py
